--- a/src/client/app.css
+++ b/src/client/app.css
@@ -20,6 +20,19 @@
 	text-align: center;
 }
 
+#scoreboardTable thead th:nth-of-type(+2) {
+	text-align: left;
+}
+
 #scoreboardTable td {
 	text-align: center;
 }
+
+#scoreboardTable tbody td:nth-of-type(+1) {
+	text-align: left;
+}
+
+#scoreboardTable thead tr {
+	cursor: pointer;
+}
+
